syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}
message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}
message SqrtRootRequest {
    int32 number=1;
}

message SqrtRootResponse {
    double result = 1;
}

message GreetWithDeadLineRequest {
    Greeting greeting = 1;
}
message GreetWithDeadLineResponse {
    string result = 1;
}


service GreetService {
    // Unary
    rpc Greet (GreetRequest) returns (GreetResponse);

    // server streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse);

    rpc LongGreet (stream LongGreetRequest) returns (LongGreetResponse);

    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse);

    rpc SqrtRoot (SqrtRootRequest) returns (SqrtRootResponse);

    // Unary
    rpc GreetWithDeadLine (GreetWithDeadLineRequest) returns (GreetWithDeadLineResponse);
}